--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,10 @@ logging:
     root: INFO
     org:
       springframework: INFO
+springdoc:
+  version: 1
+  description: This is an API for MessageScheduler. You can find out more about it at [`github`](https://github.com/aNNufriy/message-scheduler).
+  swagger-ui:
+    path: /swagger-ui.html
+  api-docs:
+    path: /api-docs
